--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ShopItemApp</string>
+    <string name="beatles">Beatles</string>
+    <string name="_1">1</string>
 </resources>
